# nexo-rs-plugin-google

./: CHANGELOG.md  Cargo.toml  README.md  nexo-plugin.toml
.github/workflows/: ci.yml  release.yml
src/: auto_discovery.rs  cli.rs  client.rs  env_config.rs  lib.rs  main.rs  plugin.rs  runtime_handle.rs  tools.rs
tests/: configure_path.rs  e2e_handshake.rs  lazy_refresh.rs  manifest_parse.rs  oauth_once_cli.rs  outbound_tool_invoke.rs
