# Phase 94 — out-of-tree standalone repo for the Google APIs tool plugin.
#
# Built as a binary subprocess plugin loaded by the nexo-rs daemon via
# discovery + auto-subprocess fallback. The daemon spawns this binary,
# JSON-RPC handshakes over stdio, and routes outbound tool calls
# (`google_auth_start` / `google_auth_status` / `google_call` /
# `google_auth_revoke`) through `plugin.outbound.google[.>]` broker
# topics. Admin RPCs land at `plugin.google.admin.*`.
#
# Setup wizard's OAuth flows (loopback + device-code) reach this
# binary via the `--oauth-once <agent_id>` CLI subcommand instead of
# linking the lib directly — keeps the daemon + setup crates free of
# the OAuth machinery.

[package]
name        = "nexo-plugin-google"
version     = "0.2.0"
description = "Google APIs (Gmail/Calendar/Drive) tool plugin for Nexo agents (out-of-tree subprocess)."
edition     = "2021"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/lordmacu/nexo-rs-plugin-google"
authors     = ["Cristian García <informacion@cristiangarcia.co>"]
readme      = "README.md"
keywords    = ["nexo", "plugin", "google", "oauth", "gmail"]
categories  = ["api-bindings", "authentication"]
rust-version = "1.80"

[lib]
name = "nexo_plugin_google"
path = "src/lib.rs"

[[bin]]
name = "nexo-plugin-google"
path = "src/main.rs"

[features]
default = []
# Mobile / embedded consumers drop the subprocess dispatch loop and
# re-use the lib surface directly. Mirrors `nexo-plugin-email`'s
# `embedded` feature.
embedded = []

[dependencies]
# Async / runtime
tokio        = { version = "1", features = ["rt-multi-thread", "macros", "sync", "io-util", "time", "process", "net", "fs"] }
async-trait  = "0.1"
futures      = "0.3"

# Serde / encoding
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
serde_yaml   = "0.9"
serde_urlencoded = "0.7"

# Tracing / errors / IDs
anyhow       = "1"
thiserror    = "1"
tracing      = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell    = "1"
chrono       = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dashmap      = "6"
arc-swap     = "1"
rand         = "0.8"

# CLI
clap         = { version = "4", features = ["derive"] }

# HTTP — rustls + ring, NO default-features to avoid aws-lc-sys on Android.
# See [feedback_rustls_default_features_off] memory rule.
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# Framework deps from crates.io (no path-deps — out-of-tree repo).
nexo-microapp-sdk    = { version = "0.1.18", features = ["plugin"] }
nexo-broker          = "0.1.5"
nexo-core            = "0.1.19"
nexo-config          = "0.1.9"
nexo-llm             = "0.1.5"
nexo-auth            = "0.1.8"
nexo-resilience      = "0.1.3"
nexo-plugin-manifest = "0.1.6"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12", "logging"] }

[dev-dependencies]
tempfile    = "3"
serial_test = "3"
tokio       = { version = "1", features = ["test-util", "macros", "rt-multi-thread"] }
toml = "1.0.7"

[profile.release]
lto             = "thin"
codegen-units   = 1
strip           = "symbols"

# Mirror the proyecto workspace `[workspace.lints.clippy]` allow-list.
[lints.clippy]
doc_overindented_list_items = "allow"
doc_lazy_continuation       = "allow"
incompatible_msrv           = "allow"
